fix: resolve flyway startup issues and related system updates